--- a/style.css
+++ b/style.css
@@ -710,13 +710,13 @@ ul.levels-ul {
 }
 .credits {
   position: absolute;
-  top: 0;
-  right: 0;
-  padding: 10px;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px;
   text-align: left;
-  background-color: rgba(255, 255, 255, 0.8);  /* Fond semi-transparent */
   font-size: 12px;
-  z-index: 1000;  /* Assure que le texte reste au-dessus des autres éléments */
+  z-index: 1000;
 }
 .export {
   margin-right: 60px
