--- a/style.css
+++ b/style.css
@@ -653,7 +653,18 @@ table.open-days tbody tr:last-child td:last-child {
 table.open-days tbody tr:last-child td:first-child {
   border-radius: 0 0 0 var(--table-border-radius);
 }
-
+.credits {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 16px; /* Taille de police encore plus grande */
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif; /* Police plus professionnelle */
+  font-weight: bold; /* Maintien du texte en gras */
+  z-index: 1000;
+}
 .two-col-layout {
   display: inline-block;
   vertical-align: top;
