--- a/style.css
+++ b/style.css
@@ -661,7 +661,7 @@ table.open-days tbody tr:last-child td:first-child {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 16px; /* Taille de police encore plus grande */
   text-align: right;
-  font-family: Arial, Helvetica, sans-serif; /* Police plus professionnelle */
+  font-family: Helvetica; /* Police plus professionnelle */
   font-weight: bold; /* Maintien du texte en gras */
   z-index: 1000;
 }
