--- a/style.css
+++ b/style.css
@@ -525,7 +525,17 @@ table.levels tbody tr td:last-child {
   width: var(--table-level-content-td-width);
   min-width: var(--table-level-content-td-width);
 }
-
+.credits {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 16px;
+  text-align: right; /* Assure que le texte est aligné à droite */
+  font-family: Arial, Helvetica, sans-serif; /* Utilise une police professionnelle */
+  z-index: 1000;
+}
 table.levels tbody tr td:first-child {
   border-left: var(--table-border);
 }
