--- a/style.css
+++ b/style.css
@@ -149,12 +149,13 @@ select:not(.bigger):hover {
   margin-right: 15px;
 }
 .custom-file-input {
-    background-color: #f3f3f3; /* Light gray background, adjust as needed */
-    border: 1px solid #ccc; /* Standard light border for the 'button' look */
-    padding: 5px 10px; /* Padding to make it look like a button */
-    text-decoration: none; /* Removes underline from links if used on <a> */
-    cursor: pointer; /* Cursor indicates clickable item */
-    display: inline-block; /* Ensures label behaves like a button */
+    background-color: #f3f3f3;  /* Light gray background, adjust as needed */
+    border: 1px solid #ccc;  /* Standard light border for the 'button' look */
+    padding: 5px 10px;  /* Padding to make it look like a button */
+    text-decoration: none;  /* Removes underline from links if used on <a> */
+    cursor: pointer;  /* Cursor indicates clickable item */
+    display: inline-block;  /* Ensures label and link behave like a button */
+    margin-right: 10px;  /* Space after the button */
 }
 .custom-file-input:hover {
   background-color: var(--button-color-hover);
