--- a/style.css
+++ b/style.css
@@ -702,8 +702,13 @@ ul.levels-ul {
   width: 250px;
 }
 
-#not-erase-data,
-#erase-data,
+#not-erase-data {
+  display: flex;
+  flex-direction: column; /* Stack elements vertically */
+  align-items: flex-start; /* Align to the left */
+  gap: 60px; /* Add vertical spacing between the label and button */
+},
+#-data,
 #not-erase-constraints,
 #erase-constraints {
   width: 120px;
